kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: helloworld
  name: helloworld
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: helloworld
