kubernetes/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "helloworld"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    #    alb.ingress.kubernetes.io/target-type: ip
  labels:
    app: helloworld
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "helloworld"
              servicePort: 80
